k8s/prod/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: app-database
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-external-service
  namespace: app-database
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30008
